--- a/index.html
+++ b/index.html
@@ -28,17 +28,13 @@
     <div class="bar3"></div>
   </div>
   <!-- Sections -->
-  <section id="home"><a href="" target="_blank">ZUPČANICI EUREKA KRČEDIN</a></section>
+  <section id="home"><a href="#" target="_blank">ZUPČANICI EUREKA KRČEDIN</a></section>
   <section id="about">
-    <h1>Bavimo se izradom uzubljenja zupčanika i lančanika <br>
-      po porudžbini do prečnika 1600mm.</h1>
+    <h1>Bavimo se izradom uzubljenja zupčanika <br> i lančanika po porudžbini do prečnika 1600mm.</h1>
     </section>
   <section id="skills"><h1>Izrada puževa i pužnog kola na zahtev</h1></section>
-  <section id="projects"><h1>Pored zupčanika i pužnih kola bavimo se izradom i <br>
-  ostalih metalostrugarskih delova.</h1></section>
-  <section id="contact"><h1>Sve informacije o uslugama i porudžbinama možete dobiti
-     <br>  na broj telefona 061 651 1382 <br>
-    <br> Eureka Krrčedin nalazi se na adresi <br> 
+  <section id="projects"><h1>Pored zupčanika i pužnih kola bavimo se izradom <br> i ostalih metalostrugarskih delova.</h1></section>
+  <section id="contact"><h1>Sve informacije o uslugama i porudžbinama možete dobiti na <br>broj telefona: 061 651 1382. <br> Eureka Krčedin nalazi se na adresi:
 Cara Dušana 18, Krčedin 22325</h1></section>
   <!-- Script -->
   <script src="script.js"></script>
